log
Wed 20 Mar 2024 08:25:25 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
1e9ab1e
Wed 20 Mar 2024 08:28:02 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:5: error: expected expression before ‘int’
   47 |     int* dato = (int*)malloc(sizeof(int));
      |     ^~~
exercises.c:46:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |   for(int i = 1; i <= 10; i++)
      |   ^~~
exercises.c:48:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |     *dato = i;
      |     ^
exercises.c:48:6: error: ‘dato’ undeclared (first use in this function)
   48 |     *dato = i;
      |      ^~~~
exercises.c:48:6: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:13: error: ‘i’ undeclared (first use in this function)
   48 |     *dato = i;
      |             ^
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
cbc64bb
Wed 20 Mar 2024 08:28:30 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
09f6091
Wed 20 Mar 2024 08:28:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
badb218
